# futarin-api

./: .gitignore  CONTRIBUTING.md  ER.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  init_mysql.sh  ws_client.py
api/: .flake8  alembic.ini  check_env.py  config.py  db.py  main.py  migrate_db.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2f0e6ca76dac_update_tables.py  46c6ca5a18f2_init.py  c0a3f6001efc_initialize_tables.py
api/routers/: raspi.py
api/services/: gpt.py  tts.py  voicevox.py  voicevox_api.py  whisper.py
api/static/: index.html  style.css
api/tests/: conftest.py  test_main.py  test_v1_raspi.py  test_v2_raspi.py  test_v2_user.py
api/tests/cruds/: conftest.py
api/tests/raspi/: conftest.py  test_v1_raspi.py  test_v2_raspi.py
api/utils/: config.py  log.py
api/v0/routers/: raspi.py
api/v0/services/: gpt.py  tts.py  voicevox.py  voicevox_api.py  whisper.py
api/v0/utils/: config.py  log.py
api/v1/assets/: file_search.txt
api/v1/mysql/: db.py  migrate_db.py  model.py
api/v1/routers/: raspi.py  sandbox.py  user.py
api/v1/schemas/: sandbox.py  text_response.py
api/v1/services/: db.py  gpt.py  gpt_backup.py  voicevox_api.py  whisper.py
api/v1/services/assistants/: main.py
api/v1/services/assistants/assistants/: create.py
api/v1/utils/: audio_converter.py  cheering.txt  config.py
api/v2/azure/: storage.py
api/v2/cruds/: couple.py  message.py  raspi.py  user.py
api/v2/models/: __init__.py  couple.py  message.py  raspi.py  text.py  user.py
api/v2/mysql/: create_tables.py  db.py  migrate_db.py  model.py
api/v2/rag/: vector_db.py
api/v2/routers/: couple.py  demo.py  pubsub.py  rag.py  raspi.py  user.py
api/v2/schemas/: couple.py  message.py  raspi.py  user.py
api/v2/services/: blob_storage.py  gpt.py  pubsub.py  voicevox_api.py  whisper.py
api/v2/utils/: config.py  index.html  logging.py  query.py
app/: Dockerfile  pyproject.toml
(+15 files in other folders)
