[tool.isort]
profile = "black"

[tool.poetry]
name = "futarin-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
openai = "^1.35.10"
azure-storage-blob = "^12.21.0"
sqlalchemy = "^2.0.35"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
